# us-energy-demmand-forecast

./: .gitignore  README.md  pyproject.toml
data/regions/AE/: model.txt  prod.csv  scaler.pkl  test.csv  train.csv
data/regions/AEP/: prod.csv  test.csv  train.csv
data/regions/AP/: prod.csv  test.csv  train.csv
data/regions/ATSI/: prod.csv  test.csv  train.csv
data/regions/BC/: prod.csv  test.csv  train.csv
data/regions/CE/: prod.csv  test.csv  train.csv
data/regions/DAY/: prod.csv  test.csv  train.csv
data/regions/DEOK/: prod.csv  test.csv  train.csv
data/regions/DOM/: prod.csv  test.csv  train.csv
data/regions/DPL/: prod.csv  test.csv  train.csv
data/regions/DUQ/: prod.csv  test.csv  train.csv
data/regions/EKPC/: prod.csv  test.csv  train.csv
data/regions/JC/: prod.csv  test.csv  train.csv
data/regions/ME/: prod.csv  test.csv  train.csv
models/: AE.keras  AEP.keras  AEP_model.h5  AE_model.h5  AP.keras  AP_model.h5  ATSI.keras  ATSI_model.h5  BC.keras  BC_model.h5  CE.keras  DAY.keras  DEOK.keras  DOM.keras  DPL.keras  DUQ.keras  EKPC.keras  JC.keras  ME.keras  PE.keras  PEP.keras  PL.keras  PN.keras  PS.keras  RECO.keras
scripts/: 01_Prepare Data.ipynb  02_Modelling.ipynb  03_Production.ipynb  Executor.ipynb  Modelling.ipynb  demand_forecast_flow.py  output.ipynb
scripts/outputs/: AE.ipynb  AEP.ipynb  AP.ipynb  ATSI.ipynb  BC.ipynb  CE.ipynb  DAY.ipynb  DEOK.ipynb  DOM.ipynb  DPL.ipynb  DUQ.ipynb  EKPC.ipynb  JC.ipynb  ME.ipynb  PE.ipynb  PEP.ipynb  PL.ipynb  PN.ipynb  PS.ipynb  RECO.ipynb
us_energy_demmand_forecast/: utils.py
(+18 files in other folders)
