[project]
name = "us-energy-demmand-forecast"
version = "0.1.1"
description = "Metaflow nanny ml POC"
authors = [
    {name = "Maria Vechtomova", email = "maria@marvelousmlops.io"},
    {name = "Jesus Lopez", email = ""},
    {name = "Santiago ", email = ""}
]
dependencies = [
    'metaflow>=2.11.0',
    'pandas>=2.2.0',
    'scikit-learn>=1.4.0',
    'lightgbm>=4.3.0'

]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

